@@ -4,7 +4,7 @@ import org.opentripplanner.model.base.ToStringBuilder;
 import org.opentripplanner.transit.raptor.api.transit.RaptorTransfer;
 
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 import java.util.Objects;
 
 import static org.opentripplanner.transit.raptor.api.request.RaptorRequest.assertProperty;
@@ -34,13 +34,12 @@ public class SearchParams {
     private final int earliestDepartureTime;
     private final int latestArrivalTime;
     private final int searchWindowInSeconds;
-    private final int boardSlackInSeconds;
     private final int numberOfAdditionalTransfers;
     private final int maxNumberOfTransfers;
     private final double relaxCostAtDestination;
     private final boolean timetableEnabled;
-    private final Collection<RaptorTransfer> accessLegs;
-    private final Collection<RaptorTransfer> egressLegs;
+    private final Collection<RaptorTransfer> accessPaths;
+    private final Collection<RaptorTransfer> egressPaths;
 
     /**
      * Default values is defined in the default constructor.
@@ -49,26 +48,24 @@ public class SearchParams {
         earliestDepartureTime = TIME_NOT_SET;
         latestArrivalTime = TIME_NOT_SET;
         searchWindowInSeconds = NOT_SET;
-        boardSlackInSeconds = 60;
         numberOfAdditionalTransfers = 5;
         maxNumberOfTransfers = NOT_SET;
         relaxCostAtDestination = NOT_SET;
         timetableEnabled = false;
-        accessLegs = Collections.emptyList();
-        egressLegs = Collections.emptyList();
+        accessPaths = List.of();
+        egressPaths = List.of();
     }
 
     SearchParams(SearchParamsBuilder<?> builder) {
         this.earliestDepartureTime = builder.earliestDepartureTime();
         this.latestArrivalTime = builder.latestArrivalTime();
         this.searchWindowInSeconds = builder.searchWindowInSeconds();
-        this.boardSlackInSeconds = builder.boardSlackInSeconds();
         this.numberOfAdditionalTransfers = builder.numberOfAdditionalTransfers();
         this.maxNumberOfTransfers = builder.maxNumberOfTransfers();
         this.relaxCostAtDestination = builder.relaxCostAtDestination();
         this.timetableEnabled = builder.timetableEnabled();
-        this.accessLegs = java.util.List.copyOf(builder.accessLegs());
-        this.egressLegs = java.util.List.copyOf(builder.egressLegs());
+        this.accessPaths = List.copyOf(builder.accessPaths());
+        this.egressPaths = List.copyOf(builder.egressPaths());
     }
 
     static SearchParams defaults() {
@@ -139,16 +136,6 @@ public class SearchParams {
     }
 
     /**
-     * The minimum wait time for transit boarding to account for schedule variation.
-     * This is added between transits, between transfer and transit, and between access "walk" and transit.
-     * <p/>
-     * The default value is 60.
-     */
-    public int boardSlackInSeconds() {
-        return boardSlackInSeconds;
-    }
-
-    /**
      * RangeRaptor is designed to search until the destination is reached and then
      * {@code numberOfAdditionalTransfers} more rounds.
      * <p/>
@@ -210,24 +197,24 @@ public class SearchParams {
     }
 
     /**
-     * Times to access each transit stop using the street network in seconds.
+     * List of access paths from the origin to all transit stops using the street network.
      * <p/>
-     * Required, at least one access leg must exist.
+     * Required, at least one access path must exist.
      */
-    public Collection<RaptorTransfer> accessLegs() {
-        return accessLegs;
+    public Collection<RaptorTransfer> accessPaths() {
+        return accessPaths;
     }
 
     /**
-     * List of all possible egress stops and time to reach destination in seconds.
+     * List of all possible egress paths to reach the destination using the street network.
      * <p>
-     * NOTE! The {@link RaptorTransfer#stop()} is the stop where the egress leg
-     * start, NOT the destination - think of it as a reversed leg.
+     * NOTE! The {@link RaptorTransfer#stop()} is the stop where the egress path
+     * start, NOT the destination - think of it as a reversed path.
      * <p/>
-     * Required, at least one egress leg must exist.
+     * Required, at least one egress path must exist.
      */
-    public Collection<RaptorTransfer> egressLegs() {
-        return egressLegs;
+    public Collection<RaptorTransfer> egressPaths() {
+        return egressPaths;
     }
 
     @Override
@@ -236,10 +223,9 @@ public class SearchParams {
             .addServiceTime("earliestDepartureTime", earliestDepartureTime, TIME_NOT_SET)
             .addServiceTime("latestArrivalTime", latestArrivalTime, TIME_NOT_SET)
             .addDurationSec("searchWindow", searchWindowInSeconds)
-            .addDurationSec("boardSlack", boardSlackInSeconds)
             .addNum("numberOfAdditionalTransfers", numberOfAdditionalTransfers)
-            .addColLimited("accessLegs", accessLegs, 5)
-            .addColLimited("egressLegs", egressLegs, 5)
+            .addColLimited("accessPaths", accessPaths, 5)
+            .addColLimited("egressPaths", egressPaths, 5)
             .toString();
     }
 
@@ -251,17 +237,16 @@ public class SearchParams {
         return earliestDepartureTime == that.earliestDepartureTime &&
                 latestArrivalTime == that.latestArrivalTime &&
                 searchWindowInSeconds == that.searchWindowInSeconds &&
-                boardSlackInSeconds == that.boardSlackInSeconds &&
                 numberOfAdditionalTransfers == that.numberOfAdditionalTransfers &&
-                accessLegs.equals(that.accessLegs) &&
-                egressLegs.equals(that.egressLegs);
+                accessPaths.equals(that.accessPaths) &&
+                egressPaths.equals(that.egressPaths);
     }
 
     @Override
     public int hashCode() {
         return Objects.hash(
-                earliestDepartureTime, latestArrivalTime, searchWindowInSeconds, accessLegs,
-                egressLegs, boardSlackInSeconds, numberOfAdditionalTransfers
+                earliestDepartureTime, latestArrivalTime, searchWindowInSeconds,
+                accessPaths, egressPaths, numberOfAdditionalTransfers
         );
     }
 
@@ -273,7 +258,7 @@ public class SearchParams {
                 earliestDepartureTime != TIME_NOT_SET || latestArrivalTime != TIME_NOT_SET,
                 "'earliestDepartureTime' or 'latestArrivalTime' is required."
         );
-        assertProperty(!accessLegs.isEmpty(), "At least one 'accessLegs' is required.");
-        assertProperty(!egressLegs.isEmpty(), "At least one 'egressLegs' is required.");
+        assertProperty(!accessPaths.isEmpty(), "At least one 'accessPath' is required.");
+        assertProperty(!egressPaths.isEmpty(), "At least one 'egressPath' is required.");
     }
 }
